# TopAnalysis

./: .gitignore
Configuration/analysis/diLeptonic/: .cvsignore  .gitignore  Analysis.C  Analysis.h  BTagEff.C  BTagEff.h  CMakeLists.txt  CalcMedian.C  CheckKinFit.C  CombinedCrossSection.C  CommandLineParameters.cc  CommandLineParameters.hh  CompactSystematicError.C  ControlPlots.C  ControlPlots.h  DilepSVDFunctions.C  DilepSVDFunctions.h  GetTypicalErrors.C  HHStyle.h  Histo.C  Histo.h  HistoFileList_JESDOWN_ee.txt  HistoFileList_combined.txt  HistoFileList_ee.txt  HistoFileList_emu.txt  HistoFileList_mumu.txt  HistoList  HistoListReader.cpp  HistoList_control  JetCorrectionUncertainty.cc  JetCorrectorParameters.cc  JetCorrectorParameters.h  KinReco.h  KinReconstructionSystematic.C  LinkDef.h  MCUncertainties.C  MCatNLO_Uncert_Down_status3_v20111028.root  MCatNLO_Uncert_Down_status3_v20120130.root  MCatNLO_Uncert_Down_status3_v20120729.root  MCatNLO_Uncert_Up_status3_v20111028.root  (+83 more)
Configuration/analysis/diLeptonic/data/: Data_PUDist_19624pb_sysDown.root  Data_PUDist_19624pb_sysUp.root  Data_PUDist_19789pb_sysDown.root  Data_PUDist_Full2012ReReco_FinalRecommendation_sysDown.root  ElectronSFtop12028.root  ElectronSFtop12028_19fb.root  KinReco_costheta_true.root  KinReco_d_angle_jet.root  KinReco_d_angle_lep.root  KinReco_rmshistA_fPt_vs_Pt.root  KinReco_rmshist_fPx_vs_Pt.root  KinReco_wmass.root  KinReco_wneutrinoEta.root  KinReco_wneutrino_E_normilyze.root  KinReco_wneutrinocuts.root  MCatNLO_status3_v20120729.root  ahrensNNLL_8TeV.root  kidonakisNNLO_8TeV.root  mttAhrens_8Tev_1725.root  pttopnnloapprox7lhc173m.txt  pttopnnloapprox8lhc173m.txt  triggerSummary_ee_19fb.root  triggerSummary_emu.root  triggerSummary_emu_19fb.root  triggerSummary_mumu.root  triggerSummary_mumu_19fb.root  triggerSummary_mumu_rereco198fb.root  ytopnnloapprox7lhc173m.txt  ytopnnloapprox8lhc173-2m.txt
Configuration/analysis/diLeptonic/doc/: Doxyfile.in
Configuration/analysis/diLeptonic/include/: DilepSVDFunctions.h  KinematicReconstruction_MeanSol.h  RootFileReader.h  ScaleFactors.h  TopAnalysis.h  plotterclass.h  sampleHelpers.h  storeTemplate.h  ttbarUtils.h
Configuration/analysis/diLeptonic/info/: README  classStructure.xmi
Configuration/analysis/diLeptonic/macros/: Analysis.C  NNLO.cpp  NNLO.h  compareClosure.C  fixLeptonBJet.C  getBtagEfficiencies.C  load_BTagEff.C  step9entries.C
Configuration/analysis/diLeptonic/scripts/: cmssw5311withTop.sh  lnData.sh  mk_BTagEffs.sh  mk_HistoFileList.sh  mk_booklet.lst  mk_booklet.sh  mk_eventcounttable.sh  parallelTools.sh  renameSelection.sh  runClosureTest.sh  runNominalParallel.sh  runNominalVariations.sh  runPDFVariations.sh  runTheoryVariations.sh  runall2.pl  runallCrab.pl  unfoldAll.sh  unfoldClosure.sh  unfoldPDF.sh  useSelection.sh
Configuration/analysis/diLeptonic/src/: AnalysisBase.cc  AnalysisBase.h  CMakeLists.txt  CommandLineParameters.cc  DilepSVDFunctions.cc  DilepSVDFunctions.h  Histo.cc  HistoListReader.cc  HistoListReader.h  JetCorrectorParameters.cc  JetCorrectorParameters.h  KinReco.cc  KinematicReconstruction.cc  KinematicReconstruction.h  KinematicReconstruction_LSroutines.cc  KinematicReconstruction_LSroutines.h  LinkDef.h  MeanSol.cc  MeanSol.h  PUReweighter.cc  PUReweighter.h  RootFileReader.cc  RootFileReader.h  ScaleFactors.cc  ScaleFactors.h  SimpleJetCorrectionUncertainty.cc  TopAnalysis.cc  TopAnalysis.h  TypicalErrors.cc  analysisObjectStructs.cc  analysisObjectStructs.h  analysisUtils.cc  analysisUtils.h  createSystCovMatrix.cc  kinRecoEfficienciesAndSF.cc  load_Analysis.cc  plotterUtils.cc  plotterUtils.h  plotterclass.cc  plotterclass.h  (+5 more)
Configuration/analysis/ttH/: .cvsignore  .gitignore  CMakeLists.txt  HiggsAnalysis.C  HiggsAnalysis.h  Histo.C  HistoList_control  JetCategories.C  JetCategories.h  LinkDef.h  Makefile  dyScaleFactors.C  dyScaleFactors.h  dyScalingHistograms.C  dyScalingHistograms.h  eventYields.C  eventYields.h  higgsUtils.C  higgsUtils.h  load_HiggsAnalysis.C  mk_HistoFileList.sh  plotterHelpers.h  plotterclass.cpp  plotterclass.h  runNominalParallel.sh  sampleHelpers.C  sampleHelpers.h  samples.C  samples.h  testJetCategories.C
Configuration/analysis/ttH/doc/: Doxyfile.in
Configuration/analysis/ttH/include/: AnalysisHistograms.h  BasicAnalyzer.h  EventYields.h  HiggsAnalysis.h  HistoListReader.h  JetCategories.h  JetMatchAnalyzer.h  LinkDef.h  MvaFactory.h  MvaReader.h  MvaTreeAnalyzer.h  MvaTreeHandler.h  MvaWeights2d.h  Playground.h  Plotter.h  Samples.h  SamplesFwd.h  analysisStructs.h  higgsUtils.h  mvaSetup.h  plotterHelpers.h
Configuration/analysis/ttH/macros/: commmands_mvaSeparationPlots.C  mvaSeparationPlots.C  mvaWeightPlots2D.C
Configuration/analysis/ttH/scripts/: mk_HistoFileList.sh  parallelTools.sh  runHiggsMasses.sh  runNominalParallel.sh  runSignalVariations.sh
Configuration/analysis/ttH/src/: AnalysisHistograms.cc  AnalysisHistograms.h  BasicAnalyzer.cc  CMakeLists.txt  DijetAnalyzer.cc  DijetAnalyzer.h  DyScaleFactors.cc  DyScaleFactors.h  DyScalingHistograms.cc  DyScalingHistograms.h  EventYields.cc  EventYields.h  HiggsAnalysis.cc  HiggsAnalysis.h  Histo.cc  HistoListReader.cc  JetCategories.cc  JetCategories.h  JetChargeAnalyzer.cc  JetChargeAnalyzer.h  JetMatchAnalyzer.cc  LinkDef.h  Makefile  MvaFactory.cc  MvaFactory.h  MvaInputVariables.cc  MvaInputVariables.h  MvaReader.cc  MvaReader.h  MvaTreeAnalyzer.cc  MvaTreeAnalyzer.h  MvaTreeHandler.cc  MvaTreeHandler.h  MvaValidation.cc  MvaValidation.h  MvaWeights2d.cc  MvaWeights2d.h  MvaWeightsAnalyzer.cc  MvaWeightsAnalyzer.h  Playground.cc  (+27 more)
Configuration/crab/: combinedSelection_step0_qcd.cfg  combinedSelection_step0_ttbar_madgraph.cfg  combinedSelection_step0_ttbar_tauola.cfg  combinedSelection_step0_wjets.cfg  combinedSelection_step0_wjets_fastsim.cfg  combinedSelection_step0_wjets_fullsim.cfg  (+12 more)
HiggsUtils/: BuildFile.xml
LeptonPlusJets/: BuildFile.xml
TopAnalyzer/: BuildFile  BuildFile.xml
TopFilter/: BuildFile  BuildFile.xml
TopUtils/: BuildFile  BuildFile.xml
ZTopUtils/: BuildFile.xml  README
(+2663 files in other folders)
